hard-gists/9875439/run.log
=== Docker Run Log for 9875439 ===
Started at: Mi 29. Okt 18:33:55 CET 2025

[2025-10-29 18:33:56] START: Running container for 9875439
[2025-10-29 18:33:56] SUCCESS: Container 1be08f3649b9710d9d44a3a6796fcdd6ae4329b7446e3d04978b884d7ecb2857 started for 9875439
=== Container logs for 9875439 ===
  File "/snippet.py", line 147
    print p
    ^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9875439 ===
[2025-10-29 18:33:58] INFO: Container 1be08f3649b9710d9d44a3a6796fcdd6ae4329b7446e3d04978b884d7ecb2857 has stopped
